beforeunload and DOMContentLoaded callbacks added, updated the data model as well as other functions such as viewSwap to support new functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             </div>
           </div>
           <div class="col-third">
-            <h1 class="header">Home</h1>
+            <div class="header-heading-wrapper">
+              <h1 class="header">Home</h1>
+              <i class="fa-solid fa-house fa-lg"></i>
+            </div>
           </div>
           <div class="col-third">
             <div class="input-wrapper">
