Feature 2: input event listener, fetch for a game by name function

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
           <div class="row flex-genres"></div>
         </div>
       </div>
+      <div data-view="game" class="hidden"></div>
     </main>
     <script src="js/data.js"></script>
     <script src="js/main.js"></script>
