--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </form>
     </header>
     <main>
-      <div data-view="home">
+      <div data-view="home" class="hidden">
         <div class="container">
           <div class="row flex-main">
             <div class="col-full">
@@ -188,7 +188,26 @@
           <div class="row flex-genres"></div>
         </div>
       </div>
-      <div data-view="game" class="hidden"></div>
+      <div data-view="game">
+        <div class="game-description-container">
+          <div class="row flex-details">
+            <div class="col-one-third">
+              <img
+                src="https://media.rawg.io/media/games/998/9980c4296f311d8bcc5b451ca51e4fe1.jpg" />
+            </div>
+            <div class="col-two-thirds flex-description-text">
+              <h1 class="description-heading">Description</h1>
+              <p class="description-paragraph"></p>
+            </div>
+            <div class="col-one-third flex-official">
+              <div class="col-full">
+                <h2 class="offical-site-heading">Visit Official Site</h2>
+                <h3 class="official-site-link">www.battlefield.com</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="js/data.js"></script>
     <script src="js/main.js"></script>
