viewSwap function updated but not completely, renderGamePage function progress

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </form>
     </header>
     <main>
-      <div data-view="home" class="hidden">
+      <div data-view="home">
         <div class="container">
           <div class="row flex-main">
             <div class="col-full">
@@ -188,14 +188,14 @@
           <div class="row flex-genres"></div>
         </div>
       </div>
-      <div data-view="game">
+      <div data-view="game" class="hidden">
         <div class="game-description-container">
           <div class="row flex-details">
             <div class="col-one-third">
               <img
                 src="https://media.rawg.io/media/games/998/9980c4296f311d8bcc5b451ca51e4fe1.jpg" />
             </div>
-            <div class="col-two-thirds flex-description-text">
+            <div class="col-two-thirds">
               <h1 class="description-heading">Description</h1>
               <p class="description-paragraph"></p>
             </div>
