Nearly complete feature 3

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
               <div class="game-img-wrapper">
                 <img
                   src="https://media.rawg.io/media/games/998/9980c4296f311d8bcc5b451ca51e4fe1.jpg"
-                  class="shooter" />
+                  id="shooter"
+                  class="genres-img" />
               </div>
               <div class="game-img-text">
                 <p>Shooters</p>
@@ -70,7 +71,8 @@
               <div class="game-img-wrapper">
                 <img
                   src="https://media.rawg.io/media/games/786/7863e587bac630de82fca50d799236a9.jpg"
-                  class="racing" />
+                  id="racing"
+                  class="genres-img" />
               </div>
               <div class="game-img-text">
                 <p>Racing</p>
@@ -80,7 +82,8 @@
               <div class="game-img-wrapper">
                 <img
                   src="https://media.rawg.io/media/games/cb4/cb487ab3c54b81cb685388bab42ec848.jpeg"
-                  class="sports" />
+                  id="sports"
+                  class="genres-img" />
               </div>
               <div class="game-img-text">
                 <p>Sports</p>
@@ -90,7 +93,8 @@
               <div class="game-img-wrapper">
                 <img
                   src="https://media.rawg.io/media/games/d0f/d0f91fe1d92332147e5db74e207cfc7a.jpg"
-                  class="role-playing-games-rpg" />
+                  id="role-playing-games-rpg"
+                  class="genres-img" />
               </div>
               <div class="game-img-text">
                 <p>RPG</p>
@@ -100,7 +104,8 @@
               <div class="game-img-wrapper">
                 <img
                   src="https://media.rawg.io/media/games/997/997ab4d67e96fb20a4092383477d4463.jpg"
-                  class="strategy" />
+                  id="strategy"
+                  class="genres-img" />
               </div>
               <div class="game-img-text">
                 <p>Strategy</p>
@@ -110,7 +115,8 @@
               <div class="game-img-wrapper">
                 <img
                   src="https://media.rawg.io/media/games/b4e/b4e4c73d5aa4ec66bbf75375c4847a2b.jpg"
-                  class="simulation" />
+                  id="simulation"
+                  class="genres-img" />
               </div>
               <div class="game-img-text">
                 <p>Simulation</p>
@@ -124,7 +130,9 @@
             <div class="col-six">
               <div class="game-img-wrapper">
                 <img
-                  src="https://media.rawg.io/media/games/45b/45b57ed59de4b84effd8f6bc4b7bf515.jpg" />
+                  src="https://media.rawg.io/media/games/45b/45b57ed59de4b84effd8f6bc4b7bf515.jpg"
+                  class="game-img"
+                  id="battlefield-v" />
               </div>
               <div class="game-img-text">
                 <p>Battlefield V</p>
@@ -133,7 +141,9 @@
             <div class="col-six">
               <div class="game-img-wrapper">
                 <img
-                  src="https://media.rawg.io/media/games/8cc/8cce7c0e99dcc43d66c8efd42f9d03e3.jpg" />
+                  src="https://media.rawg.io/media/games/8cc/8cce7c0e99dcc43d66c8efd42f9d03e3.jpg"
+                  class="game-img"
+                  id="rocket-league" />
               </div>
               <div class="game-img-text">
                 <p>Rocket League</p>
@@ -142,7 +152,9 @@
             <div class="col-six">
               <div class="game-img-wrapper">
                 <img
-                  src="https://media.rawg.io/media/games/031/031af38e6a558d4cd4bf91ee80904cdf.jpg" />
+                  src="https://media.rawg.io/media/games/031/031af38e6a558d4cd4bf91ee80904cdf.jpg"
+                  class="game-img"
+                  id="fifa-20" />
               </div>
               <div class="game-img-text">
                 <p>FIFA 20</p>
@@ -151,7 +163,9 @@
             <div class="col-six">
               <div class="game-img-wrapper">
                 <img
-                  src="https://media.rawg.io/media/games/3f2/3f207dcc7931598567a90bc779a95cf8.jpg" />
+                  src="https://media.rawg.io/media/games/3f2/3f207dcc7931598567a90bc779a95cf8.jpg"
+                  class="game-img"
+                  id="diablo-ii-resurrected" />
               </div>
               <div class="game-img-text">
                 <p>Diablo II: Resurrected</p>
@@ -160,7 +174,9 @@
             <div class="col-six">
               <div class="game-img-wrapper">
                 <img
-                  src="https://media.rawg.io/media/games/095/0953bf01cd4e4dd204aba85489ac9868.jpg" />
+                  src="https://media.rawg.io/media/games/095/0953bf01cd4e4dd204aba85489ac9868.jpg"
+                  class="game-img"
+                  id="ark-survival-of-the-fittest" />
               </div>
               <div class="game-img-text">
                 <p>ARK: Survival Of The Fittest</p>
@@ -169,7 +185,9 @@
             <div class="col-six">
               <div class="game-img-wrapper">
                 <img
-                  src="https://media.rawg.io/media/games/651/651ae84f2d5e36206aad90976a453329.jpg" />
+                  src="https://media.rawg.io/media/games/651/651ae84f2d5e36206aad90976a453329.jpg"
+                  class="game-img"
+                  id="black-desert-online" />
               </div>
               <div class="game-img-text">
                 <p>Black Desert Online</p>
@@ -190,7 +208,7 @@
       </div>
       <div data-view="game" class="hidden">
         <div class="game-description-container">
-          <div class="row flex-details">
+          <!-- <div class="row flex-details">
             <div class="col-one-third">
               <img
                 src="https://media.rawg.io/media/games/998/9980c4296f311d8bcc5b451ca51e4fe1.jpg" />
@@ -205,7 +223,7 @@
                 <h3 class="official-site-link">www.battlefield.com</h3>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
