--- a/index.html
+++ b/index.html
@@ -207,24 +207,7 @@
         </div>
       </div>
       <div data-view="game" class="hidden">
-        <div class="game-description-container">
-          <!-- <div class="row flex-details">
-            <div class="col-one-third">
-              <img
-                src="https://media.rawg.io/media/games/998/9980c4296f311d8bcc5b451ca51e4fe1.jpg" />
-            </div>
-            <div class="col-two-thirds">
-              <h1 class="description-heading">Description</h1>
-              <p class="description-paragraph"></p>
-            </div>
-            <div class="col-one-third flex-official">
-              <div class="col-full">
-                <h2 class="offical-site-heading">Visit Official Site</h2>
-                <h3 class="official-site-link">www.battlefield.com</h3>
-              </div>
-            </div>
-          </div> -->
-        </div>
+        <div class="game-description-container"></div>
       </div>
     </main>
     <script src="js/data.js"></script>
