Feature #5: Possibly complete. Will take fresh look at it tomorrow to iron out any kinks

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 type="text"
                 name="filter-bar"
                 id="filter-bar"
-                placeholder="Filter by genre" />
+                placeholder="Filter by platform"
+                class="hidden" />
             </div>
           </div>
           <div class="col-third">
