favicon link tag fixed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Repository</title>
-    <!-- <link rel="icon" href="images/favicon.ico" /> -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -19,7 +18,7 @@
       type="image/png"
       sizes="16x16"
       href="images/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="images/favicon/site.webmanifest" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/styles.css" />
