--- a/index.html
+++ b/index.html
@@ -3,34 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta property="og:title" content="Game Repository" />
+    <meta property="og:title" content="Game Repository" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="A web application for gamers who want to access game information." />
     <meta property="og:url" content="https://malcolm-abbott.github.io/game-repository/" />
     <meta property="og:image" content="https://malcolm-abbott.github.io/game-repository/images/bfv-bg.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <title>Game Repository</title> -->
-    <!-- HTML Meta Tags -->
     <title>Game Repository</title>
-    <meta name="description" content="A web application for gamers who want to access game information.">
-
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://malcolm-abbott.github.io/game-repository/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Game Repository">
-    <meta property="og:description" content="A web application for gamers who want to access game information.">
-    <meta property="og:image" content="https://malcolm-abbott.github.io/game-repository/images/bfv-bg.jpg">
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="malcolm-abbott.github.io">
-    <meta property="twitter:url" content="https://malcolm-abbott.github.io/game-repository/">
-    <meta name="twitter:title" content="Game Repository">
-    <meta name="twitter:description" content="A web application for gamers who want to access game information.">
-    <meta name="twitter:image" content="https://malcolm-abbott.github.io/game-repository/images/bfv-bg.jpg">
-
-    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
